--- a/views/index.erb
+++ b/views/index.erb
@@ -53,36 +53,36 @@
       <div class="row">
         <div class="col-10">
           <form action="/add_to_playlist" method="POST">
-          <table class="table table-hover">
-            <thead>
-              <tr>
-                <th scope="col">Artist</th>
-                <th scope="col">Album</th>
-                <th scope="col">Song Title</th>
-                <th scope="col">30 sec</th>
-                <th scope="col"> <button class="btn btn-light" type="submit" id="btn">Add!</button> </th>
-              </tr>
-            </thead>
-            <tbody>
+            <input type="hidden" value="<%= @playlist_name.strip %>" name="playlist_name" %>
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th scope="col">Artist</th>
+                  <th scope="col">Album</th>
+                  <th scope="col">Song Title</th>
+                  <th scope="col">30 sec</th>
+                  <th scope="col"> <button class="btn btn-light" type="submit" id="btn">Add!</button> </th>
+                </tr>
+              </thead>
+              <tbody>
+                <% if @songs %>
+                  <% @songs.each do |song| %>
+                        <tr>
+                          <td>
+                            <input type="checkbox" name="selected_songs[<%= song['song'] %>]" value="<%= song['song'].id %>"
+                            <% if song['parsed-album'].downcase.strip == song['song'].album.name.downcase.strip%> checked <% end %> >
+                            <%= song['song'].artists.map { |s| s.name }.join(", ") %>
+                          </td>
+                          <td> <%= song['song'].album.name%> </td>
+                          <td> <%= song['song'].name %> </td>
+                          <td> <audio controls> <source src="<%= song['preview-url'] %>" type="audio/mpeg"> </audio></td>
+                        </tr>
 
-              <% if @songs %>
-                <% @songs.each do |song| %>
-                      <tr>
-                        <td>
-                          <input type="checkbox" name="selected_songs[<%= song['song'] %>]" value="<%= song['song'].id %>"
-                          <% if song['parsed-album'].strip == song['song'].album.name.strip%> checked <% end %> >
-                          <%= song['song'].artists.map { |s| s.name }.join(", ") %>
-                        </td>
-                        <td> <%= song['song'].album.name%> </td>
-                        <td> <%= song['song'].name %> </td>
-                        <td> <audio controls> <source src="<%= song['preview-url'] %>" type="audio/mpeg"> </audio></td>
-                      </tr>
-
+                  <% end %>
                 <% end %>
-              <% end %>
-            </tbody>
-          </table>
-          </form>
+              </tbody>
+            </table>
+            </form>
         </div>
       </div>
   </div>
