--- a/views/index.erb
+++ b/views/index.erb
@@ -53,7 +53,7 @@
       <div class="row">
         <div class="col-10">
           <form action="/add_to_playlist" method="POST">
-            <input type="hidden" value="<%= @playlist_name.strip %>" name="playlist_name" %>
+            <input type="hidden" value="<%= @playlist_name ? @playlist_name.strip : "" %>" name="playlist_name" %>
             <table class="table table-hover">
               <thead>
                 <tr>
